# touchgal-mcp-server

./: README.md  pyproject.toml
touchgal_mcp_server/: __init__.py  backends.py  server.py
